# sl-client

./: .gitattributes  .gitignore  CHAT_ROADMAP.md  Cargo.toml  IDIOMATIC_ROADMAP.md  INVENTORY_ROADMAP.md  KNOWN_ISSUES_ADITI.md  MISSING_ROADMAP.md  PERMISSION_ROADMAP.md  README.md  ROADMAP.md  SL_API_ROAD_MAP.md  SL_REPL_ROAD_MAP.md  TEST_ROADMAP.md  VIEWER_ROADMAP.md  _typos.toml  deny.toml  release.sh
sl-account-dirs/: Cargo.toml  README.md  cliff.toml
sl-account-dirs/src/: lib.rs
sl-anim/: Cargo.toml  README.md  cliff.toml
sl-anim/src/: blend.rs  decode.rs  lib.rs  registry.rs  sample.rs
sl-anim/tests/: motion.rs
sl-asset-sched/: Cargo.toml  README.md  cliff.toml
sl-asset-sched/src/: cpu.rs  fetcher.rs  gate.rs  lib.rs  priority.rs  screen.rs  stats.rs
sl-avatar/: Cargo.toml  README.md  cliff.toml
sl-avatar/src/: bakecolor.rs  basemesh.rs  lib.rs  masks.rs  morph.rs  params.rs  physics.rs  resolve.rs  skeletal.rs  skeleton.rs  skin.rs  volume.rs  wearable.rs
sl-avatar/tests/: avatar.rs
sl-cef/: Cargo.toml  README.md  build.rs
sl-cef/examples/: osr_smoke.rs
sl-cef/src/: chromium.rs  lib.rs  vk.rs
sl-client-bevy/: Cargo.toml  README.md  cliff.toml
sl-client-bevy-viewer/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
sl-client-bevy-viewer/src/: animations.rs  animesh.rs  appearance.rs  attachment_menu.rs  avatar_assets.rs  avatar_menu.rs  avatar_pick.rs  avatar_picker.rs  avatar_profile.rs  avatars.rs  bake_inputs.rs  bake_publish.rs  body_physics.rs  bottom_toolbar.rs  browser_widget.rs  bump.rs  camera.rs  chat.rs  chat_input.rs  conversations.rs  coords.rs  diagnostics.rs  edit_link.rs  edit_math.rs  edit_params.rs  edit_selection.rs  edit_tool.rs  emoji_complete.rs  emoji_picker.rs  environment.rs  flexi.rs  floater.rs  floater_persist.rs  flycam_ui.rs  gallery.rs  gizmos.rs  ground.rs  groups.rs  hand_pose.rs  hud.rs  (+83 more)
sl-client-bevy-viewer/tests/: uv_seams.rs
sl-client-bevy/examples/: bevy_login_hold_logout.rs  login_hold_logout.rs  survey_probe.rs
sl-client-bevy/src/: animations.rs  assets.rs  avatars.rs  caps.rs  chat_log.rs  clouds.rs  clouds.wgsl  experiences.rs  fetch.rs  grass.rs  http.rs  inventory.rs  inventory_cache.rs  lib.rs  materials.rs  media.rs  meshes.rs  prims.rs  retry.rs  sky.rs  sky.wgsl  stars.rs  stars.wgsl  sun_disc.rs  sun_disc.wgsl  terrain.rs  terrain.wgsl  textures.rs  tree.rs  upload.rs  voice.rs  water.rs  water.wgsl  world.rs
sl-client-tokio/: Cargo.toml  README.md  cliff.toml
sl-client-tokio/examples/: asset_fetch.rs  asset_upload.rs  experiences.rs  group_admin.rs  inventory_cache.rs  inventory_edit.rs  login_hold_logout.rs  object_media.rs  pbr_materials.rs  profile_edit.rs  rez_edit_object.rs  rez_sample_grass.rs  rez_sample_prims.rs  rez_sample_trees.rs  terrain_probe.rs  tokio_login_hold_logout.rs  voice.rs
sl-client-tokio/src/: appearance.rs  assets.rs  caps.rs  chat_log.rs  experiences.rs  fetch.rs  http.rs  inventory.rs  lib.rs  lsl_syntax_cache.rs  materials.rs  media.rs  meshes.rs  retry.rs  textures.rs  upload.rs  voice.rs
sl-conformance/: Cargo.toml  README.md  cliff.toml
sl-conformance/src/: cases.rs  context.rs  fixtures.rs  gitinfo.rs  grid.rs  lib.rs  metrics.rs  record.rs  registry.rs  report.rs  support.rs  trace.rs
sl-emoji/: Cargo.toml  README.md  cliff.toml
sl-emoji/src/: emoji.rs  group.rs  lib.rs  lookup.rs
sl-gst/: Cargo.toml  README.md
sl-gst/src/: lib.rs  messages.rs  stream.rs  surface.rs
sl-j2c-encode/: Cargo.toml  README.md  cliff.toml
sl-j2c-encode/src/: lib.rs
sl-l10n/: Cargo.toml  README.md  cliff.toml
sl-l10n/src/: lib.rs
sl-llsd/: Cargo.toml  README.md  cliff.toml
sl-llsd/src/: binary.rs  error.rs  lib.rs  notation.rs  value.rs
sl-llsd/tests/: llsd.rs
sl-lsl/: Cargo.toml  README.md  cliff.toml
sl-lsl-lsp/: Cargo.toml  README.md  cliff.toml
sl-lsl-lsp/src/: completion.rs  diagnostics.rs  docs.rs  document.rs  hover.rs  inlay.rs  lib.rs  navigate.rs  navigation.rs  position.rs  server.rs  signature.rs  symbols.rs
sl-lsl-lsp/tests/: server.rs
sl-lsl/src/: ast.rs  lexer.rs  lib.rs  parser.rs  render.rs  semantics.rs  syntax.rs  token.rs
sl-lsl/tests/: differential.rs  lex.rs  parse.rs  semantics.rs
sl-material/: Cargo.toml  README.md  cliff.toml
sl-material/src/: decode.rs  error.rs  lib.rs  overrides.rs  types.rs
sl-media/: Cargo.toml  README.md
sl-media/src/: lib.rs
sl-mesh/: Cargo.toml  README.md  cliff.toml
sl-mesh/src/: decode.rs  disk.rs  entry.rs  fetcher.rs  lib.rs  progress.rs  seams.rs  store.rs
sl-msg-template/: Cargo.toml  README.md  cliff.toml
sl-msg-template/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
sl-msg-template/tests/: parse_real_template.rs
sl-notecard/: Cargo.toml  README.md  cliff.toml
sl-notecard/src/: decode.rs  encode.rs  item.rs  lib.rs  types.rs
sl-prim/: Cargo.toml  README.md  cliff.toml
sl-prim/src/: flexi.rs  geometry.rs  lib.rs  lod.rs  path.rs  profile.rs  shape.rs  volume.rs
sl-proto/: Cargo.toml  README.md  cliff.toml
sl-proto/src/: appearance.rs  asset_keys.rs  bookkeeping_ids.rs  chat_log.rs  command.rs  error.rs  extra_params.rs  j2c.rs  lib.rs  mesh_lod.rs  object_update.rs  particles.rs  scoped_id.rs  session.rs  sim_session.rs  terrain.rs  types.rs
sl-proto/tests/: lifecycle.rs  sim_session.rs
sl-repl/: Cargo.toml  README.md
sl-repl-bevy/: Cargo.toml  README.md
sl-repl/src/: args.rs  auth.rs  chat_log_args.rs  context.rs  error.rs  format.rs  lib.rs  meta.rs  parse.rs  record.rs  registry.rs  smoke.rs
sl-repl/testdata/: README.md  credentials.example.toml  interactive-probe.repl  record-interactive.py
sl-rlv/: Cargo.toml  README.md  cliff.toml
sl-rlv/src/: behaviour.rs  command.rs  lib.rs
sl-sculpt/: Cargo.toml  README.md  cliff.toml
sl-sculpt/src/: lib.rs  stitch.rs  tessellate.rs
sl-settings/: Cargo.toml  README.md  cliff.toml
sl-settings/src/: error.rs  lib.rs  store.rs  toml_format.rs  value.rs
sl-survey/: Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml
sl-terrain/: Cargo.toml  README.md  cliff.toml
(+1685 files in other folders)
