[package]
name = "sl-client-bevy-viewer"
description = "Minimal Bevy visual viewer for Second Life / OpenSim: logs in and renders a region (terrain, prims, meshes, sculpts) with diffuse textures"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "viewer", "bevy", "renderer"]
categories = ["game-development", "rendering", "visualization"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
bevy = { version = "0.19.0" }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
fs-err = { version = "3.3.0" }
sl-client-bevy = { version = "0.1.0", path = "../sl-client-bevy", features = [
    "bevy_pbr",
] }
sl-repl = { version = "0.1.0", path = "../sl-repl" }
sl-terrain = { version = "0.1.0", path = "../sl-terrain" }
sl-texture = { version = "0.1.0", path = "../sl-texture" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
url = { version = "2.5.8" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
