[package]
name = "sl-client-bevy-viewer"
description = "Minimal Bevy visual viewer for Second Life / OpenSim: logs in and renders a region (terrain, prims, meshes, sculpts) with diffuse textures"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "viewer", "bevy", "renderer"]
categories = ["game-development", "rendering", "visualization"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
avian3d = { version = "0.7.0" }
# `system_font_discovery` turns on parley/fontique OS font enumeration and
# fallback, so CJK / Cyrillic / Arabic / emoji text resolves to the host's fonts
# instead of rendering as tofu (viewer-ui-text-foundation). The colour-emoji
# fallback is bundled separately (see `assets/fonts/`), because the system emoji
# font is usually COLRv1, which swash cannot rasterise.
bevy = { version = "0.19.0", features = ["system_font_discovery"] }
bytes = { version = "1.12.0" }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
fs-err = { version = "3.3.0" }
image = { version = "0.25.10", default-features = false, features = ["tga"] }
# A direct dependency purely so the UI font stack (`src/ui_font.rs`) can register
# the bundled faces under private family names: `bevy_text` wraps parley but does
# not re-export it, so `Blob` / `FontInfoOverride` / `GenericFamily` are only
# reachable from parley itself. Kept at `bevy_text`'s own spec so the two unify
# on one parley build (a second copy would mean a second, unrelated font
# collection).
parley = { version = "0.9.0", default-features = false, features = ["std"] }
sl-anim = { version = "0.1.0", path = "../sl-anim" }
sl-client-bevy = { version = "0.1.0", path = "../sl-client-bevy", features = [
    "bevy_pbr",
] }
sl-repl = { version = "0.1.0", path = "../sl-repl" }
sl-terrain = { version = "0.1.0", path = "../sl-terrain" }
sl-texture = { version = "0.1.0", path = "../sl-texture", features = [
    "encode",
] }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
url = { version = "2.5.8" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
sl-mesh = { version = "0.1.0", path = "../sl-mesh" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }

[lints]
workspace = true
