[package]
name = "sl-client-bevy-viewer"
description = "Minimal Bevy visual viewer for Second Life / OpenSim: logs in and renders a region (terrain, prims, meshes, sculpts) with diffuse textures"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "viewer", "bevy", "renderer"]
categories = ["game-development", "rendering", "visualization"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[features]
# `spacenav` is on by default, so a plain `cargo build` drives the flycam from an
# attached SpaceNavigator rather than the zeroed stub. It is Linux-only (evdev),
# so a Windows / macOS build must turn it off (`--no-default-features`) until the
# cross-platform read lands (viewer-input-spacenav-crossplatform); the
# `SpacenavInput` stub then keeps consumers `cfg`-free.
default = ["spacenav"]

# Read a 3Dconnexion SpaceNavigator / SpaceMouse 6-DOF device to drive the flycam
# (viewer-input-spacenav-device / -camera-mapping). Linux-only for now (evdev).
spacenav = ["dep:evdev"]

[dependencies]
avian3d = { version = "0.7.0" }
# `system_font_discovery` turns on parley/fontique OS font enumeration and
# fallback, so CJK / Cyrillic / Arabic / emoji text resolves to the host's fonts
# instead of rendering as tofu (viewer-ui-text-foundation). The colour-emoji
# fallback is bundled separately (see `assets/fonts/`), because the system emoji
# font is usually COLRv1, which swash cannot rasterise.
bevy = { version = "0.19.0", features = ["system_font_discovery"] }
# The UI skin / design-token system (viewer-ui-skin-tokens): real CSS
# (selectors, pseudo-classes, `var()` custom-property tokens, `@import` overlay
# merge, hot-reloaded `.css`) as the skin language. `src/skin.rs` registers the
# scaffold's logical box / corner components as CSS-styleable so skins author
# `margin-inline-start` etc. (never physical `left`/`right`, which it bans) and
# the shipped bidi resolver still mirrors the layout. Pinned to `bevy_flair`'s
# own `bevy 0.19` line so the two unify on one Bevy build.
bevy_flair = { version = "0.8.0" }
# The i18n foundation (viewer-i18n-fluent-scaffold): Project Fluent `.ftl`
# bundles behind Bevy assets, with runtime locale switching. `bevy_fluent`
# provides the asset loaders, the `Locale` negotiation input and the
# `Localization` lookup resource; `fluent` / `fluent_content` are its runtime
# types the lookup API (`src/i18n.rs`) builds typed named arguments with and
# formats through (never a pre-formatted string); `unic-langid` is the language
# tag those resources are keyed by.
bevy_fluent = { version = "0.15.0" }
bytes = { version = "1.12.0" }
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
directories = { version = "6.0.0" }
# The SpaceNavigator / 6-DOF device read (the `spacenav` feature, Linux-only for
# now — see the `viewer-input-spacenav-crossplatform` roadmap task).
evdev = { version = "0.13.2", optional = true }
fluent = { version = "0.16.1" }
fluent_content = { version = "0.0.5" }
fs-err = { version = "3.3.0" }
image = { version = "0.25.10", default-features = false, features = ["tga"] }
# A direct dependency purely so the UI font stack (`src/ui_font.rs`) can register
# the bundled faces under private family names: `bevy_text` wraps parley but does
# not re-export it, so `Blob` / `FontInfoOverride` / `GenericFamily` are only
# reachable from parley itself. Kept at `bevy_text`'s own spec so the two unify
# on one parley build (a second copy would mean a second, unrelated font
# collection).
parley = { version = "0.9.0", default-features = false, features = ["std"] }
sl-account-dirs = { version = "0.1.0", path = "../sl-account-dirs" }
sl-anim = { version = "0.1.0", path = "../sl-anim" }
sl-client-bevy = { version = "0.1.0", path = "../sl-client-bevy", features = [
    "bevy_pbr",
] }
# The emoji dataset & lookup layer (viewer-emoji-data): the grouped, searchable
# glyph list the emoji-picker floater (`src/emoji_picker.rs`) presents.
sl-emoji = { version = "0.1.0", path = "../sl-emoji" }
# Locale-aware value formatting (viewer-i18n-number-datetime-formats): the CLDR/
# ICU-backed number, currency and date/time formatters the `Translator` exposes,
# so a panel writes a grouped balance / coordinate / timestamp for the active
# locale rather than a bare `to_string()`. The text side is `bevy_fluent`; this
# is the value side Fluent's `NUMBER()` / `DATETIME()` cannot do.
sl-l10n = { version = "0.1.0", path = "../sl-l10n" }
sl-notecard = { version = "0.1.0", path = "../sl-notecard" }
sl-repl = { version = "0.1.0", path = "../sl-repl" }
sl-settings = { version = "0.1.0", path = "../sl-settings" }
sl-terrain = { version = "0.1.0", path = "../sl-terrain" }
sl-texture = { version = "0.1.0", path = "../sl-texture", features = [
    "encode",
] }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
url = { version = "2.5.8" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
sl-mesh = { version = "0.1.0", path = "../sl-mesh" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }

[lints]
workspace = true
