[package]
name = "sl-client-bevy"
description = "Bevy ECS Second Life / OpenSim client plugin built on sl-proto"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "client", "bevy", "ecs"]
categories = ["network-programming", "game-development"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[features]
# Off by default: the headless client needs no renderer. The windowed viewer
# enables this to pull in Bevy's PBR/render stack and the `TerrainMaterial`
# (a custom 4-way terrain texture-splat material + shader).
default = []
bevy_pbr = ["bevy/bevy_pbr"]

[dependencies]
arc-swap = { version = "1.9.2" }
async-trait = { version = "0.1.89" }
bevy = { version = "0.19.0", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_mesh",
] }
bytes = { version = "1.12.0" }
crossbeam-channel = { version = "0.5.15" }
flate2 = { version = "1.1.9" }
fs-err = { version = "3.3.0" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
sl-asset = { version = "0.1.0", path = "../sl-asset" }
sl-mesh = { version = "0.1.0", path = "../sl-mesh" }
sl-prim = { version = "0.1.0", path = "../sl-prim" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }
sl-sculpt = { version = "0.1.0", path = "../sl-sculpt" }
sl-texture = { version = "0.1.0", path = "../sl-texture" }
sl-wire = { version = "0.1.0", path = "../sl-wire" }
thiserror = { version = "2.0.18" }
time = { version = "0.3.49", features = ["local-offset"] }
tracing = { version = "0.1.44" }
url = { version = "2.5.8" }
uuid = { version = "1.18.1", features = ["v4"] }
# Matches the version bevy_image re-exports through; used to construct `Image`.
wgpu-types = { version = "29" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
tracing-subscriber = { version = "0.3.19" }

[lints]
workspace = true
