[package]
name = "sl-client-tokio"
description = "Tokio-based async Second Life / OpenSim client built on sl-proto"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "client", "tokio", "async"]
categories = ["network-programming", "game-development"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
arc-swap = { version = "1.9.2" }
async-trait = { version = "0.1.89" }
bytes = { version = "1.12.0" }
flate2 = { version = "1.1.9" }
fs-err = { version = "3.3.0" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }
sl-mesh = { version = "0.1.0", path = "../sl-mesh" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }
sl-texture = { version = "0.1.0", path = "../sl-texture" }
sl-wire = { version = "0.1.0", path = "../sl-wire" }
thiserror = { version = "2.0.18" }
time = { version = "0.3.49", features = ["local-offset"] }
tokio = { version = "1.44.2", features = ["net", "time", "rt", "macros", "sync"] }
tracing = { version = "0.1.44" }
url = { version = "2.5.8" }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3.19" }

[lints]
workspace = true
