[package]
name = "sl-conformance"
description = "Manual live-grid conformance test harness for sl-client: runs one feature test at a time against OpenSim or Second Life Beta and records git-stamped results"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"
publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["cli", "conformance", "opensim", "secondlife", "testing"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[[bin]]
name = "sl-conformance"
path = "src/bin/sl-conformance.rs"

[[bin]]
name = "sl-conformance-report"
path = "src/bin/sl-conformance-report.rs"

[[bin]]
name = "sl-conformance-trace"
path = "src/bin/sl-conformance-trace.rs"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
etherparse = { version = "0.20.2" }
fs-err = { version = "3.3.0" }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
owo-colors = "4.3.0"
pcap-file = { version = "2.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
sl-client-tokio = { path = "../sl-client-tokio", version = "0.1.0" }
sl-repl = { path = "../sl-repl", version = "0.1.0" }
sl-wire = { path = "../sl-wire", version = "0.1.0", features = ["serde"] }
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["formatting", "parsing"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = { version = "1.1.2" }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "tracing-log"
] }
url = "2.5.8"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3.2"

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
