[package]
name = "sl-llsd"
description = "LLSD (Linden Lab Structured Data) value model and codecs for Second Life / OpenSim tooling"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "llsd", "encoding", "codec"]
categories = ["encoding", "parser-implementations"]

[dependencies]
base64 = { version = "0.22.1" }
roxmltree = { version = "0.20.0" }
sl-types = { version = "0.6.2", path = "../../sl-map-tools/sl-types" }
thiserror = { version = "2.0.18" }
time = { version = "0.3.49", features = ["formatting", "parsing"] }
uuid = { version = "1.18.1" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
