[package]
name = "sl-mesh"
description = "Decoding mesh fetch API and cache (LLMesh decode + LOD-aware store + Firestorm-compatible on-disk cache) for Second Life / OpenSim clients"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "mesh", "llmesh", "cache"]
categories = ["network-programming", "game-development", "caching"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
arc-swap = { version = "1.9.2" }
async-lock = { version = "3.4.2" }
async-trait = { version = "0.1.89" }
bytes = { version = "1.12.0" }
dashmap = { version = "6.2.1" }
event-listener = { version = "5.4.1" }
flate2 = { version = "1.1.9" }
fs-err = { version = "3.3.0" }
num_cpus = { version = "1.17.0" }
parking_lot = { version = "0.12.5" }
sl-asset-sched = { version = "0.1.0", path = "../sl-asset-sched" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }
sl-wire = { version = "0.1.0", path = "../sl-wire" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
uuid = { version = "1.18.1" }

[dev-dependencies]
pollster = { version = "0.4.0" }
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
