[package]
name = "sl-msg-template"
description = "Parser for the Second Life / OpenSim LLUDP message_template.msg into a typed AST"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "lludp", "protocol", "parser"]
categories = ["parser-implementations", "encoding"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
thiserror = { version = "2.0.18" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
