[package]
name = "sl-proto"
description = "Sans-I/O state machine for Second Life / OpenSim client sessions (login, keep-alive, logout)"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "lludp", "protocol", "sans-io"]
categories = ["network-programming", "game-development"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
md5 = { version = "0.7.0" }
sl-lsl = { version = "0.1.0", path = "../sl-lsl" }
sl-types = { version = "0.8.0" }
sl-wire = { version = "0.1.0", path = "../sl-wire" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
url = { version = "2.5.8" }
uuid = { version = "1.18.1" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }
sl-types = { version = "0.8.0" }
sl-wire = { version = "0.1.0", path = "../sl-wire" }
uuid = { version = "1.18.1" }

[lints]
workspace = true
