[package]
name = "sl-repl-bevy"
description = "Interactive Bevy-driven Second Life / OpenSim REPL test client built on sl-repl and sl-client-bevy"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "repl", "client", "cli"]
categories = ["command-line-utilities", "network-programming"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
bevy = { version = "0.19.0", default-features = false }
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
crossbeam-channel = "0.5.15"
rustyline = "17.0.2"
sl-client-bevy = { version = "0.1.0", path = "../sl-client-bevy" }
sl-proto = { version = "0.1.0", path = "../sl-proto" }
sl-repl = { version = "0.1.0", path = "../sl-repl" }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "tracing-log"] }
url = "2.5.8"

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
