[package]
name = "sl-repl"
description = "Shared library for an interactive Second Life / OpenSim REPL test client: command grammar, parser, and registry over sl-proto"
readme = "README.md"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"

publish = false
repository = "https://github.com/taladar/sl-client"
keywords = ["secondlife", "opensim", "repl", "client", "protocol"]
categories = ["network-programming", "command-line-utilities"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
sl-proto = { version = "0.1.0", path = "../sl-proto" }
thiserror = { version = "2.0.18" }
toml = { version = "1.1.2" }
tracing = { version = "0.1.44" }
url = { version = "2.5.8" }
uuid = { version = "1.18.1" }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
